nullaway_error_1EC6A04F-1814-4B0C-AAED-A529AF1994B5.txt
/Users/nima/Developer/null-repair-auto/projects/spring-framework/spring-beans/src/main/java/org/springframework/beans/factory/groovy/GroovyDynamicElementReader.java:66: error: [NullAway] assigning @Nullable expression to @NonNull field
                this.beanDefinition = beanDefinition;
                                    ^
    (see http://t.uber.com/nullaway )
